# rss-reader-rust

./: .gitignore  Cargo.toml  README.md  Rocket.toml
resource/: init.sql
src/: main.rs
src/dao/: db.rs  user.rs
src/model/: user.rs
templates/: login.html.tera
tests/: rss_load_test.rs  sqlite_test.rs
