[package]
name = "rss-reader-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# db
rusqlite = {version="0.31.0", features = ["chrono"]}
# date
chrono = "0.4.10"
# web
rocket = {version="0.5.0", features=["json"]}

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars", "tera"]